<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
   android:background="@drawable/event_background"
    android:orientation="vertical" >

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="2dp"
        android:background="@color/blue_shade"
        android:minWidth="100dp"
        android:text="   Login  "
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="2dp"
        android:background="@color/blue_shade"
        android:minWidth="100dp"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

</LinearLayout>