...
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_intermediate"></EditText>

            </LinearLayout>

            <Button
                android:id="@+id/button_generateOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
...
